--- a/resume.tex
+++ b/resume.tex
@@ -83,6 +83,7 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 %---------------------------------------------------------
 \begin{rSection}{Extra-Cirrucular} \itemsep -3pt
 	\item Club Runner - Compete in distances from 8K to Marathon.
+	\item Karate Club - Athlete and Club Treasurer. Responsible for organiation of all financial aspects.
 	\item Intermediate chess student, intermediate violin student, avid reader
 \end{rSection}
 
