--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 \begin{rSection}{Education}
 
 {\bf Indiana University, Bloomington} \hfill {\em January 2019 - May 2020} \\
-	Computer Science M.S. \hfill { GPA: x.xxx } \\ \\
+	Computer Science M.S. \hfill { GPA: 4.000 } \\ \\
 {\bf Indiana University, Bloomington} \hfill {\em August 2015 - May 2019} \\
 Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 %Minor in Linguistics \smallskip \\
@@ -50,9 +50,9 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Technical Strengths}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-	Programming Languages \ & Java, Racket(Scheme), Python, C, Haskell, C\#, Javascript \\
+	Programming Languages \ & Racket(Scheme), Java, C, Python, Haskell, Coq, Pie, JS \\
 	Mathematics Strenghts & Topology, Real Analysis, Linear Algebra, Calculus \\
-	Dependent Types & Theorem Proving: Coq, Racket (Pie), Agda \\
+	Programming Language Theory \ & Dependent Types, Interpreters, Custom Languages \\
 \end{tabular}
 
 \end{rSection}
@@ -63,8 +63,9 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 
 \begin{rSection}{Work Experience}
 
-	\begin{rSubsection}{Service Now}{May 2019 - August 2019}{TODO}{}
-		\item TODO
+	\begin{rSubsection}{Service Now}{May 2019 - August 2019}{Platform Engineering Intern}{}
+		\item Created a new UI feature relying on full stack production including React/Redux-Saga and Java.
+		\item Simplified core database to decrease the number of records needed per customer application instance.
 	\end{rSubsection}
 
 	\begin{rSubsection}{Crowe LLP}{May 2018 - August 2018}{Applied Technology Intern}{}
@@ -84,12 +85,10 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Extra-Cirrucular} \itemsep -3pt
 	\item Club Runner - Compete in distances from 8K to Marathon.
 	\item Karate Club - Athlete and Club Treasurer. Responsible for organiation of all financial aspects.
-	\item Intermediate chess student, intermediate violin student, avid reader
+	\item Intermediate chess student, intermediate violin student, avid reader.
 \end{rSection}
 
 \begin{rSection}{Personal Traits}
-\item TODO
-\item TODO
-\item TODO
+\item Interest in difficult problems involving complex problem solving and logic.
 \end{rSection}
 \end{document}
