--- a/resume.tex
+++ b/resume.tex
@@ -51,7 +51,7 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 	Programming Languages \ & Racket(Scheme), Java, C, Python, Haskell, Coq, Pie, JS \\
-	Mathematics Strenghts & Topology, Real Analysis, Linear Algebra, Calculus \\
+	Mathematics Strengths & Topology, Real Analysis, Linear Algebra, Calculus \\
 	Programming Language Theory \ & Dependent Types, Interpreters, Custom Languages \\
 \end{tabular}
 
@@ -82,7 +82,7 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 %---------------------------------------------------------
 % Extra Curricular
 %---------------------------------------------------------
-\begin{rSection}{Extra-Cirrucular} \itemsep -3pt
+\begin{rSection}{Extra-Curricular} \itemsep -3pt
 	\item Club Runner - Compete in distances from 8K to Marathon.
 	\item Karate Club - Athlete and Club Treasurer. Responsible for organiation of all financial aspects.
 	\item Intermediate chess student, intermediate violin student, avid reader.
