--- a/resume.tex
+++ b/resume.tex
@@ -50,9 +50,9 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Technical Strengths}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-	Programming Languages \ & Racket(Scheme), Java, C, Python, Haskell, Coq, Pie, JS \\
+	Programming Languages \ & Racket(Scheme), Java, C, Python, Haskell, Coq, Pie, Javascript \\
 	Mathematics & Topology, Real Analysis, Linear Algebra, Calculus \\
-	Programming Language Theory \ & Dependent Types, Interpreters, Custom Languages \\
+	Programming Language Theory \ & Dependent Types, Interpreters, Custom Languages, Compilers \\
 \end{tabular}
 
 \end{rSection}
@@ -64,17 +64,18 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Work Experience}
 
 	\begin{rSubsection}{Service Now}{May 2019 - August 2019}{Platform Engineering Intern}{}
-		\item Created a new UI feature relying on full stack production including React/Redux-Saga and Java.
-		\item Simplified core database to decrease the number of records needed per customer application instance.
+		\item Created a new UI feature to dynamically render titles based on user values relying on full stack production.
+		\item Worked to alter the core database functionality to decrease the number of records needed per customer instance.
 	\end{rSubsection}
 
 	\begin{rSubsection}{Crowe LLP}{May 2018 - August 2018}{Applied Technology Intern}{}
-		\item Created solutions relying on front-end (HTML, Javascript, AngularJS) and back-end (C\#, SQL Server) components.
-		\item Worked in a fast-pased "Agile" team environment.
+		\item Worked as sole web engineer on team, requiring new UI pages and middle layer solutions done in C\#.
+		\item Coordinated with database team members on all projects to ensure maximal efficiency when working with terrabytes of data.
 	\end{rSubsection}
 
-	\begin{rSubsection}{Indiana University SICE Department}{August 2017 - December 2017}{Undergraduate Instructor}{}
-		\item Instructed a fundamentals of data structures course. Responsible for running lab sections, holding office hours, grading and preparing assignments/exams.
+	\begin{rSubsection}{Indiana University SICE Department}{August 2017 - December 2017}{Undergraduate Instructor: Fundamentals of Data Structures}{}
+		\item Helped dynamically develop a curriculum based on student performance and overall feedback.
+		\item Responsible for running lab sections, holding office hours, grading and preparing all assignments and examinations.
 	\end{rSubsection}
 
 \end{rSection}
@@ -85,10 +86,8 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Extra-Curricular} \itemsep -3pt
 	\item Club Runner - Compete in distances from 8K to Marathon.
 	\item Karate Club - Athlete and Club Treasurer. Responsible for organization of all financial aspects.
+	\item Linux - Interested in customizing operating systems (Arch) and software (Vim, Suckless Utilities) to their fullest extent.
 	\item Intermediate chess student, intermediate violin student, avid reader.
 \end{rSection}
 
-\begin{rSection}{Personal Traits}
-\item Interest in difficult problems involving complex problem solving and logic.
-\end{rSection}
 \end{document}
