changing things up

--- a/resume.tex
+++ b/resume.tex
@@ -19,13 +19,10 @@
 
 \begin{rSection}{Education}
 
-{\bf Indiana University, Bloomington} \hfill {\em January 2019 - May 2020} \\
-	Computer Science M.S. \hfill { GPA: 4.000 } \\ \\
-{\bf Indiana University, Bloomington} \hfill {\em August 2015 - May 2019} \\
-Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
-%Minor in Linguistics \smallskip \\
-%Member of Eta Kappa Nu \\
-%Member of Upsilon Pi Epsilon \\
+	{\bf Indiana University, Bloomington} \hfill {\em August 2015 - May 2020} \\
+	Computer Science M.S. \hfill { GPA: 4.000 } \\
+	Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }\\
+	\textbf{Relevant Courses} \hfill Data Structures, Artificial Intelligence, Advanced Functional, Compilers
 
 
 \end{rSection}
@@ -64,18 +61,18 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 \begin{rSection}{Work Experience}
 
 	\begin{rSubsection}{Service Now}{May 2019 - August 2019}{Platform Engineering Intern}{}
-		\item Created a new UI feature to dynamically render titles based on user values relying on full stack production.
-		\item Worked to alter the core database functionality to decrease the number of records needed per customer instance.
+		\item Designed new UI feature to dynamically render titles based on design-time values of the work-flow system using Java/JavaScript.
+		\item Altered core database to store user data history as snapshots, eliminating dependencies and cutting the number of records needed per customer instance in half.
 	\end{rSubsection}
 
 	\begin{rSubsection}{Crowe LLP}{May 2018 - August 2018}{Applied Technology Intern}{}
-		\item Worked as sole web engineer on team, requiring new UI pages and middle layer solutions done in C\#.
-		\item Coordinated with database team members on all projects to ensure maximal efficiency when working with terrabytes of data.
+		\item Worked as sole web engineer on the Revenue Cycle Platform, creating new pages that efficiently mutated and interacted with customer data relying on full-stack production as well as machine learning support.
+		\item Coordinated with database team members on all projects in order to minimize queries and ensure maximal efficiency when working with terrabytes of data.
 	\end{rSubsection}
 
 	\begin{rSubsection}{Indiana University SICE Department}{August 2017 - December 2017}{Undergraduate Instructor: Fundamentals of Data Structures}{}
-		\item Helped dynamically develop a curriculum based on student performance and overall feedback.
-		\item Responsible for running lab sections, holding office hours, grading and preparing all assignments and examinations.
+		\item Helped develop a dynamic curriculum based on student performance and overall feedback.
+		\item Responsible for running lab sections, holding office hours, grading and preparing all assignments and examinations, as well as one-on-one tutoring with select students.
 	\end{rSubsection}
 
 \end{rSection}
@@ -84,10 +81,11 @@ Computer Science B.S., Mathematics B.S. \hfill { GPA: 3.764 }
 % Extra Curricular
 %---------------------------------------------------------
 \begin{rSection}{Extra-Curricular} \itemsep -3pt
-	\item Club Runner - Compete in distances from 8K to Marathon.
+	\item Projects - Verified implementation of a heap in Coq, custom language with only prime-factorized numbers, Haskell/Racket interpreters, various fractals and games.
+	\item Club Runner - Compete in distances from 8K to Marathon for more than ten years.
 	\item Karate Club - Athlete and Club Treasurer. Responsible for organization of all financial aspects.
-	\item Linux - Interested in customizing operating systems (Arch) and software (Vim, Suckless Utilities) to their fullest extent.
-	\item Intermediate chess student, intermediate violin student, avid reader.
+	\item Linux - Interested in customizing operating systems (Arch) and software (Vim, Suckless Utilities) to their fullest extent using C and Bash.
+	\item Pass-times: chess, violin, reading, film, fitness.
 \end{rSection}
 
 \end{document}
