--- a/resume.tex
+++ b/resume.tex
@@ -4,7 +4,7 @@
 
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage[left=0.5in,top=0.25in,right=0.5in,bottom=0.25in]{geometry} % Document margins
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Jacob Adley}
@@ -64,11 +64,17 @@
 
 \end{rSection}
 
+\begin{rSection}{Projects} \itemsep -3pt
+	\item \textbf{Verified implementation of a heap:} written in Coq, implementation and proofs about insert/merge preserving heap property as well as proofs about size.
+	\item \textbf{Primal Form:} custom language written in Racket where numbers are only represented as their prime- factorized form, done by overriding base functions like application and datum of the base language.
+	\item \textbf{Compiler:} uses interpreters within many compiler passes to transform a susbset of Racket to x86 assembly; currently completed, work in progress to expand initial language.
+	\item \textbf{Other:} Haskell/Racket interpreters, various fractals and games.
+\end{rSection}
+
 %---------------------------------------------------------
 % Extra Curricular
 %---------------------------------------------------------
 \begin{rSection}{Extra-Curricular} \itemsep -3pt
-	\item Projects - Verified implementation of a heap in Coq, custom language with only prime-factorized numbers, Haskell/Racket interpreters, various fractals and games.
 	\item Club Runner - Compete in distances from 8K to Marathon for more than ten years.
 	\item Karate Club - Athlete and Club Treasurer. Responsible for organization of all financial aspects.
 	\item Linux - Interested in customizing operating systems (Arch) and software (Vim, Suckless Utilities) to their fullest extent using C and Bash.
